src/test/deca/syntax/invalid/op_minus_plus.synt
op_minus_plus.deca:11: